--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -11,7 +11,7 @@ h4 {
     font-weight: bold;
 }
 .landing-page {
-    background-color: #ff9063;
+    background-color: #ff8b5b;
     width: 100%;
     height: 100vh;
 }
