--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -10,36 +10,44 @@ h4 {
 .bold-text {
     font-weight: bold;
 }
-.landing-page {
+#welcome-section {
     background-color: #ff8b5b;
     width: 100%;
-    height: 100vh;
+    height: 80vh;
 }
 nav.top-nav {
     background-color: #ff9063;
     box-shadow: none;
+    position: fixed;
+    top: 0;
+    height: 70px;
 }
-.landing-page .header {
+#welcome-section .header {
     margin: 0px 50px;
 }
 
 .logo a {
-    font-size: 25px;
+    font-size: 30px;
+}
+#navbar ul li a {
+    font-size: 18px;
 }
 .lets-talk a {
-    width: 120px;
+    width: 130px;
+    height: 44px;
     border: 1px solid white;
     border-radius: 35px;
 }
 .profile {
     font-family: monospace, lobster, "Segoe UI";
-    margin-top: 70px;
     display: flex;
     justify-content: center;
+    margin-top: 70px;
+    padding-top: 80px;
 }
 .profile .image {
-    height: 200px;
-    width: 200px;
+    height: 220px;
+    width: 220px;
     margin: 30px;
 }
 .profile .image img {
@@ -50,11 +58,17 @@ nav.top-nav {
     margin-top: 70px;
 }
 .profile .intro h4 {
-    font-size: 35px;
+    font-size: 40px;
+    font-weight: bold;
+}
+.profile .intro h1 {
+    font-size: 40px;
+    margin-top: 10px;
+    font-weight: bold;
 }
 .profile .intro h5 {
-    font-weight: bold;
-    font-size: 20px;
+    font-size: 28px;
+    margin: 10px;
 }
 .landing-footer {
     margin: 80px;
@@ -115,7 +129,7 @@ nav.top-nav {
     border-bottom: 2px solid #ff9063;
     padding-bottom: 10px;
 }
-.tabnav {
+.project-tile {
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
@@ -124,10 +138,10 @@ nav.top-nav {
     display: flex;
     justify-content: space-between;
 }
-.recent-projects {
+#projects {
     margin: 50px 0;
 }
-.recent-projects h4 {
+#projects h4 {
     margin-bottom: 30px;
     font-weight: bold;
 }
@@ -154,12 +168,12 @@ a {
 a:hover {
     background-color: #f3cbbb;
 }
-.about_me {
-    margin: 50px 0;
+#about_me {
+    margin: 80px 0;
 }
-.about_me h4 {
+#about_me h3 {
     font-weight: bold;
-    margin: 0 0 12px 30px;
+    margin: 0 0 70px 30px;
 }
 .about .about1 {
     margin: 20px 0 30px 0;
@@ -257,12 +271,12 @@ a:hover {
     margin: 0px;
     padding: 0px;
 }
-.footer {
+#footer {
     background-color: black;
     padding-top: 70px;
     padding-bottom: 30px;
 }
-.footer .container .row:last-child {
+#footer .container .row:last-child {
     margin-top: 60px;
 }
 .socials h3 {
@@ -272,32 +286,32 @@ a:hover {
 .socials p {
     margin-bottom: 30px;
 }
-.footer .socials li a {
+#footer .socials li a {
     margin: 0px;
     margin-right: 10px !important;
     padding: 0px;
 }
-.footer .socials .icons {
+#footer .socials .icons {
     height: 35px;
     width: 35px;
     background-color: #26140c;
     padding: 10px;
     border-radius: 5px;
 }
-.footer .socials .icons:hover {
+#footer .socials .icons:hover {
     background-color: #462518;
 }
-.footer .socials nav {
+#footer .socials nav {
     background-color: black;
 }
-.footer .cv {
+#footer .cv {
     padding-right: 0px;
     margin-top: 70px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
 }
-.footer .cv ul {
+#footer .cv ul {
     display: flex;
     justify-content: center;
 }
@@ -308,14 +322,17 @@ a:hover {
 .download-cv {
     margin-right: 20px;
 }
+#footer .container .row:last-child {
+    display: flex;
+}
 .copyright p span {
     color: #ff8553;
 }
-.footer .footer-nav {
+#footer .footer-nav {
     padding-right: 0px;
     margin-left: 60px;
 }
-.footer .footer-nav ul {
+#footer .footer-nav ul {
     display: flex;
     justify-content: flex-end;
 }
